# T02

./: .cproject  .project  M4_Demo.ioc  NUCLEO-F412ZG.xml  README.md  config.h  settings.c  settings.h  struct.h
Drivers/: driver_logs.h  spi_bus.c  spi_bus.h  spi_hal_msp.c
Drivers/spi/: SPI.c  SPI.h  SPITivaDMA.c  SPITivaDMA.h
Drivers/spi_flash/: flash_25xxx.c
Inc/: FreeRTOSConfig.h  hardware.h  main.h  stm32f4xx_hal_conf.h  usbd_cdc_if.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
archive/: archive.c  archive.h  circ_memory.c  queue_mng.c  queue_mng.h
console/: console.c  console.h  data_opr.c  data_opr.h  interpreter.c  interpreter.h  message.h  message_eng.c
navigation/: navigation.c  navigation.h  receiver.h
peripherals/: inp_out.c  inp_out.h
sflash/: archive.c  archive.h  circ_memory.c  circ_memory.h  ext_memory.c  ext_memory.h  flash_25xxx.c  flash_25xxx.h
software/gost28147/: CMakeLists.txt  Gost28147.cpp  Gost28147.h  main.cpp
utils/: data_opr.c  data_opr.h  time_app.c  time_app.h  ustdlib.c  ustdlib.h
